implementacao 2026-07-11-salary-detail.md
